syntax = "proto3";
package io.carbynestack.castor.common.grpc;

option java_multiple_files = true;

message GrpcReservation{
  string reservation_id = 1;
  string tuple_type = 2;
  repeated GrpcReservationElement reservations = 3;
  GrpcActivationStatus activation_status = 4;
}

message GrpcReservationElement {
  string tuple_chunk_id = 1;
  int64 reserved_tuples = 2;
  int64 start_index = 3;
}

enum GrpcActivationStatus{
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  // protolint:disable:next ENUM_FIELD_NAMES_UPPER_SNAKE_CASE 
  // protolint:disable:next ENUM_FIELD_NAMES_ZERO_VALUE_END_WITH 
  // protolint:disable:next ENUM_NAMES_UPPER_CAMEL_CASE
  LOCKED = 0;
  // protolint:disable:next ENUM_FIELD_NAMES_PREFIX
  // protolint:disable:next ENUM_FIELD_NAMES_UPPER_SNAKE_CASE 
  // protolint:disable:next ENUM_FIELD_NAMES_ZERO_VALUE_END_WITH 
  // protolint:disable:next ENUM_NAMES_UPPER_CAMEL_CASE
  UNLOCKED = 1;
}

message GrpcUpdateReservationRequest{
  string reservation_id = 1;
  GrpcActivationStatus activation_status = 2;
}